feat: 添加批量编辑方法

--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelEditComponent.razor
@@ -19,7 +19,7 @@
                         </div>
                     </EditTemplate>
                 </EditorItem>
-                <EditorItem @bind-Field="@context.Name" />
+                <EditorItem @bind-Field="@context.Name" Readonly=BatchEditEnable />
                 <EditorItem @bind-Field="@context.ChannelType" />
                 <EditorItem @bind-Field="@context.Enable" />
                 <EditorItem @bind-Field="@context.LogEnable" />
