--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
@@ -53,6 +53,12 @@
             </Button>
         </ExportButtonDropdownTemplate>
         <TableToolbarTemplate>
+
+            <TableToolbarButton TItem="Variable" IsDisabled=@(!AuthorizeButton(AdminOperConst.Edit))
+                                Color=Color.Info Text="@DefaultLocalizer["BatchEdit"]"
+                                OnClickCallback=@(BatchEdit) />
+
+
             <TableToolbarPopConfirmButton TItem="Variable"
                                           Color=Color.Warning Text="@Localizer["Clear"]" IsDisabled=@(!AuthorizeButton("清空"))
                                           IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> { await VariableService.ClearVariableAsync();
