--- a/src/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
@@ -7,6 +7,7 @@
 @inherits ComponentDefault
 
 
+@* class=@((Item.CurrentDevice?.DeviceStatus==DeviceStatusEnum.OnLine?"green--text mx-1":"red--text mx-1")) *@
 <div class="device">
     <Card class="mb-2">
 
@@ -14,7 +15,6 @@
 
             <span class=@("text-h6 mx-1") style="overflow:auto;">
                 <span style="white-space: nowrap !important;overflow: hidden !important; text-overflow: ellipsis !important;"
-                      class=@((Item.CurrentDevice?.DeviceStatus==DeviceStatusEnum.OnLine?"green--text mx-1":"red--text mx-1"))
                       title=@Item.CurrentDevice?.Name>@Item.CurrentDevice?.Name</span>
             </span>
 
