--- a/src/ThingsGateway.Gateway.Razor/MainLayout.razor
+++ b/src/ThingsGateway.Gateway.Razor/MainLayout.razor
@@ -17,6 +17,7 @@
                     AdditionalAssemblies=App.RazorAssemblies AllowDragTab=true
                     UseTabSet="false" TabDefaultUrl="/">
                 <Header>
+                    <div class="flex-fill"></div>
 
                     @* 搜索框 *@
                     <GlobalSearch Menus=@(MenuService.SameLevelMenuItems) />
