!22 fix: 增加 fill 元素保证小屏幕时用户信息靠右 * chore: 删除冗余代码 * fix: 增加 fill 元素保证小屏幕时用户信息靠右 * doc: 代码格式化

--- a/src/ThingsGateway.Gateway.Razor/MainLayout.razor
+++ b/src/ThingsGateway.Gateway.Razor/MainLayout.razor
@@ -17,6 +17,7 @@
                     AdditionalAssemblies=App.RazorAssemblies AllowDragTab=true
                     UseTabSet="false" TabDefaultUrl="/">
                 <Header>
+                    <div class="flex-fill"></div>
 
                     @* 搜索框 *@
                     <GlobalSearch Menus=@(MenuService.SameLevelMenuItems) />
@@ -24,12 +25,8 @@
                     @* 语言选择 *@
                     <CultureChooser />
 
-
                     @* 主题切换 *@
                     <ThemeToggle />
-
-
-
 
                     @* 全屏按钮 *@
                     <FullScreenButton class="layout-header-bar d-none d-lg-flex px-2" FullScreenIcon="fa fa-arrows-alt"
