--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
@@ -156,7 +156,11 @@ else
                         <EditTemplate Context="value">
                             <div class="col-12  col-md-6">
                                 <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
-                                        OnQueryAsync="OnRedundantDevicesQuery"
+                                        OnQueryAsync="OnRedundantDevicesQuery" IsClearable OnClearAsync=@(()=>
+                                        {
+                                            value.RedundantDeviceId = default;
+                                            return Task.CompletedTask;
+                                        })
                                         ShowSearch="true" />
                             </div>
                         </EditTemplate>
