feat(TouchSocket): 调整代码

--- a/src/ThingsGateway.Admin.Razor/Pages/HardwareInfoPage.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/HardwareInfoPage.razor
@@ -38,7 +38,7 @@
 
                             </EditTemplate>
                         </EditorItem>
-                        <EditorItem @bind-Field="@context.DriveInfo" Visible=false>
+                        <EditorItem @bind-Field="@context.DriveInfo" Ignore=true>
                         </EditorItem>
                     </FieldItems>
                 </EditorFormObject>
