--- a/src/ThingsGateway.Admin.Razor/Components/EditComponent.razor
+++ b/src/ThingsGateway.Admin.Razor/Components/EditComponent.razor
@@ -4,7 +4,7 @@
 @typeparam T where T : class, new()
 <div class="editpage">
 
-    <ValidateForm class="p-4" Model="@Model" OnValidSubmit="OnSave">
+    <ValidateForm class="p-4 h-100" Model="@Model" OnValidSubmit="OnSave">
 
         <EditorForm RowType=RowType.Inline ItemsPerRow=ItemsPerRow ShowLabelTooltip=true LabelWidth=200 Model="Model">
             <Buttons>
