--- a/src/ThingsGateway.Gateway.Razor/MainLayout.razor
+++ b/src/ThingsGateway.Gateway.Razor/MainLayout.razor
@@ -29,7 +29,7 @@
                     <ThemeToggle />
 
                     @* 全屏按钮 *@
-                    <FullScreenButton class="layout-header-bar d-none d-lg-flex px-2" FullScreenIcon="fa fa-arrows-alt"
+                    <FullScreenButton class="layout-header-bar d-none d-lg-flex px-2" Icon="fa fa-arrows-alt"
                                       TooltipPlacement=Placement.Bottom TooltipText="@Localizer[nameof(FullScreenButton)]" />
 
                     @* 版本号 *@
