--- a/src/ThingsGateway.Gateway.Razor/Pages/_Log/BackendLogPage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/_Log/BackendLogPage.razor
@@ -38,7 +38,7 @@
             <DateTimeRange @bind-Value="model.SearchDate" ShowLabel="true" />
         </div>
         <div class="col-12 ">
-            <Select @bind-Value="model.LogLevel" ShowLabel="true" PlaceHolder="All" />
+            <Select @bind-Value="model.LogLevel" ShowLabel="true" PlaceHolder="All" IsPopover />
         </div>
     </div>;
 
