--- a/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/SQLHisAlarm/HisAlarmPage.razor
+++ b/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/SQLHisAlarm/HisAlarmPage.razor
@@ -35,10 +35,10 @@
             <DateTimeRange @bind-Value="model.SearchDate" ShowLabel="true" />
         </div>
         <div class="col-12 ">
-            <Select @bind-Value="model.AlarmType" ShowLabel="true" />
+            <Select @bind-Value="model.AlarmType" ShowLabel="true" IsPopover />
         </div>
         <div class="col-12 ">
-            <Select @bind-Value="model.EventType" ShowLabel="true" />
+            <Select @bind-Value="model.EventType" ShowLabel="true" IsPopover />
         </div>
     </div>;
 
