--- a/src/ThingsGateway.Admin.Razor/Pages/OperLogPage.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/OperLogPage.razor
@@ -36,7 +36,7 @@
             <DateTimeRange @bind-Value="model.SearchDate" ShowLabel="true" />
         </div>
         <div class="col-12 ">
-            <Select @bind-Value="model.Category" ShowLabel="true" PlaceHolder="All" />
+            <Select @bind-Value="model.Category" ShowLabel="true" PlaceHolder="All" IsPopover />
         </div>
     </div>;
 
