--- a/src/ThingsGateway.Admin.Razor/Pages/UserCenter/WorkbenchInfoEditPage.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/UserCenter/WorkbenchInfoEditPage.razor
@@ -5,6 +5,6 @@
 
 <ValidateForm class="p-4" Model="@Model" OnValidSubmit="OnSave">
     <MultiSelect class="mb-2" Items="@SelectedItems" @bind-Value="@Model.Shortcuts" ShowSearch="true" ShowToolbar="true" />
-    <Select Items="@SelectedItems" @bind-Value="@Model.Razor" ShowSearch="true" />
+    <Select Items="@SelectedItems" @bind-Value="@Model.Razor" ShowSearch="true" IsPopover />
     <Button class="mt-2" ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@DefaultLocalizer["Save"] />
 </ValidateForm>
