--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
@@ -35,7 +35,7 @@
                         <div class="col-12  col-md-6 ">
                             <BootstrapInputGroup>
                                 <BootstrapInputGroupLabel DisplayText=@value.GetType().GetPropertyDisplayName(nameof(value.ChannelId)) />
-                                <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true" />
+                                <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true" IsPopover />
                                 <Button class="text-end" Icon="fa-solid fa-plus" OnClick="AddChannel"></Button>
                             </BootstrapInputGroup>
                         </div>
@@ -46,7 +46,7 @@
                         <div class="col-12  col-md-6">
                             <Select @bind-Value="@value.PluginName"
                                     Items="@PluginNames" OnSelectedItemChanged=OnPluginNameChanged
-                                    ShowSearch="true" />
+                                    ShowSearch="true" IsPopover />
                         </div>
                     </EditTemplate>
                 </EditorItem>
@@ -65,7 +65,7 @@
                         <div class="col-12  col-md-6">
                             <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
                                     OnQueryAsync="OnRedundantDevicesQuery"
-                                    ShowSearch="true" />
+                                    ShowSearch="true" IsPopover />
                         </div>
                     </EditTemplate>
 
@@ -127,7 +127,7 @@ else
                             <div class="col-12  col-md-6 ">
                                 <BootstrapInputGroup>
                                     <BootstrapInputGroupLabel DisplayText=@value.GetType().GetPropertyDisplayName(nameof(value.ChannelId)) />
-                                    <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true" />
+                                    <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true" IsPopover />
                                     <Button class="text-end" Icon="fa-solid fa-plus" OnClick="AddChannel"></Button>
                                 </BootstrapInputGroup>
                             </div>
@@ -138,7 +138,7 @@ else
                             <div class="col-12  col-md-6">
                                 <Select @bind-Value="@value.PluginName"
                                         Items="@PluginNames" OnSelectedItemChanged=OnPluginNameChanged
-                                        ShowSearch="true" />
+                                        ShowSearch="true" IsPopover />
                             </div>
                         </EditTemplate>
                     </EditorItem>
@@ -157,7 +157,7 @@ else
                             <div class="col-12  col-md-6">
                                 <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
                                         OnQueryAsync="OnRedundantDevicesQuery"
-                                        ShowSearch="true" />
+                                        ShowSearch="true" IsPopover />
                             </div>
                         </EditTemplate>
 
