--- a/src/ThingsGateway.Gateway.Razor/Pages/Runtime/VariableRuntimePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Runtime/VariableRuntimePage.razor
@@ -20,7 +20,7 @@
         <SearchTemplate>
             <div class="row form-inline g-2">
                 <div class="col-12 col-md-6">
-                    <Select IsVirtualize @bind-Value="context.DeviceName" Items="@CollectDeviceNames" ShowSearch="true" ShowLabel="true" IsClearable DisableItemChangedWhenFirstRender=true />
+                    <Select IsVirtualize @bind-Value="context.DeviceName" Items="@CollectDeviceNames" ShowSearch="true" ShowLabel="true" IsClearable DisableItemChangedWhenFirstRender=true IsPopover />
                 </div>
                 <div class="col-12 col-md-6">
                     <BootstrapInput @bind-Value="context.Name" ShowLabel="true" />
